# ping

./: Cargo.toml  README.md  build.rs  pong.proto
ernesto/: Cargo.toml
ernesto/src/: main.rs
ernesto/src/systems/: mod.rs  paddle.rs
ping/src/: main.rs  pong.rs
ping/src/systems/: mod.rs  paddle.rs
server/: Cargo.toml  build.rs  pong.proto
server/src/: main.rs  pong_grpc.rs
src/client/: main.rs  pong.rs
src/client/systems/: mod.rs  network.rs  paddle.rs
src/client/systems/network/: pong.rs
src/server/: client.rs  main.rs  pong.rs
