[package]
name = "ping"
version = "0.1.0"
edition = "2018"

[[bin]]
name="server"
path="./src/server/main.rs"

[[bin]]
name="client"
path="./src/client/main.rs"

[dependencies]
protobuf        = "2"
httpbis         = { git = "https://github.com/stepancheg/rust-http2" }
grpc ="*"
grpc-protobuf="*"
futures = "*"

[dependencies.amethyst]
version = "0.15"
features = ["metal"]

[build-dependencies]
protoc-rust-grpc = "0.8.2"
