[package]
name = "server"
version = "0.1.0"
edition = "2018"

[[bin]]
name="server"
path="./src/main.rs"

[[bin]]
name="client"
path="./src/client.rs"

[dependencies]
protobuf        = "2"
httpbis         = { git = "https://github.com/stepancheg/rust-http2" }
grpc ="*"
grpc-protobuf="*"

[build-dependencies]
protoc-rust-grpc = "0.8.2"